--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-body {background-color: powderblue;}
-h1 {color: blue}
-p {color: red}
+<style>
+    body {background-color: powderblue;}
+    h1 {color: blue}
+    p {color: red}
+
+ #changeBackgroundButton {
+        background-color: #3498db;
+        color: #ffffff;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+    }
+</style>
