--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 <style>
-    #changeBackgroundButton {
+    changeBackgroundButton {
         background-color: #3498db;
         color: #ffffff;
         border: none;
