--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 <style>
 body{
-    background-color: #3498db;
-        color: #ffffff;
+    background-color: white;
+        color: #00FFE4;
 }
     ChangeBackgroundButton {
         background-color: #3498db;
